# xiaomi-note-exporter

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  markdown-splitter.py  markdown-to-json.py  package-lock.json  package.json  tsconfig.json  vite.config.ts  xiaomiNoteExporter.sln
.agents/: AGENTS.md
.agents/specs/: RUST_TESTS_MODULE.md
.codex/: AGENTS.md
.github/: FUNDING.yml
.github/workflows/: build.yml  (+1 more)
public/: splashscreen.html
src/: App.vue  auto-imports.d.ts  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: converter.rs  export.rs  files.rs  mod.rs  sessions.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  sessions.rs
src-tauri/src/services/: converter.rs  date_parser.rs  files.rs  markdown.rs  mod.rs  scraper.rs  settings.rs  update.rs
src-tauri/src/services/scripts/: scraper.js
src-tauri/src/tests/: converter_tests.rs  date_parser_tests.rs  files_tests.rs  markdown_tests.rs  mod.rs  scraper_tests.rs  update_tests.rs
xiaomi-note-exporter/: index.html  package-lock.json  package.json  vite.config.ts
xiaomiNoteExporter/: ConsoleHelp.cs  Driver.cs  DriverHelpers.cs  JsonConverter.cs  Program.cs  Prompt.cs  RelativeTimeParser.cs  Scraper.cs  SimplifiedDateParser.cs  xiaomiNoteExporter.csproj
xiaomiNoteExporter.Gui/: App.config  App.xaml  App.xaml.cs  BrowserWorker.cs  Driver.cs  UpdateCheck.cs  xiaomiNoteExporter.Gui.csproj
(+198 files in other folders)
