[package]
name = "xiaomi-note-exporter"
version = "2.0.0"
description = "Tool for exporting notes from Mi Cloud"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xiaomi_note_exporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5"
url = "2.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
